--- a/scraping/avito_playground.ipynb
+++ b/scraping/avito_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "9aba204f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "d8a34038",
    "metadata": {},
    "outputs": [],
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b19bb86e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "avito = Avito('Avito', 'https://www.avito.ru/rossiya/avtomobili?p={}', 2, logger)"
+    "avito = Avito('https://www.avito.ru/rossiya/avtomobili?p={}', 2, logger)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "bac07d70",
    "metadata": {},
    "outputs": [],
@@ -64,14 +64,6 @@
     "    with open(f'{avito.broken_offers_subfolder}/{file_name}', 'r', encoding='utf-8') as f:\n",
     "        offers.append(bs(f.read()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "785d5320",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
